--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^9.8.6",
+    "axios": "^1.3.3",
     "bootstrap": "^5.2.3",
     "postcss-cli": "^10.1.0",
     "react": "^18.2.0",
@@ -29,8 +30,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build:css":"postcss src/style/tailwind.css -o src/style/main.css",
-    "watch:css":"postcss src/style/tailwind.css -o src/style/main.css --watch"
+    "build:css": "postcss src/style/tailwind.css -o src/style/main.css",
+    "watch:css": "postcss src/style/tailwind.css -o src/style/main.css --watch"
   },
   "eslintConfig": {
     "extends": [
